generate fabric api to store
